# Rosemary-App

./: .gitignore  Dockerfile  compose.yml  rosemary-app  test_recall.py
backend-py/: pyproject.toml
backend-py/src/rosemary_app/: client.py  main.py  nights.py  summaries.py
backend-py/src/rosemary_app/routes/: chat.py  context.py  sessions.py  upload.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  store.ts
frontend/src/components/: Attachment.tsx  MarkdownText.tsx  ToolFallback.tsx
frontend/src/pages/: ChatPage.tsx
frontend/src/themes/: current.css  dark.css  light.css
