[project]
name = "rosemary-app"
version = "0.1.0"
description = "Rosemary — Kylee's AI companion"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "rosemary-sdk",
    "assistant-stream>=0.0.31",
    "pendulum>=3.0.0",
    "psycopg[binary]>=3.0.0",
    "jinja2>=3.0.0",
    "logfire[fastapi]>=3.0.0",  # Observability - wraps OTel with nicer API
    "orjson>=3.11.5",
    "asyncpg>=0.30.0",
    "apscheduler>=3.10.0,<4",  # Scheduler for nights + summaries containers
    "openpyxl>=3.1.0",         # Excel spreadsheet creation for Kylee
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rosemary_app"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.uv.sources]
# Local editable for dev. For deployment: swap to git+tag
rosemary-sdk = { path = "../../Rosemary-SDK", editable = true }
